# sphinx-workshop

./: .buildinfo  about.html  conf.py  genindex.html  index.html  index.md  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: about.doctree  environment.pickle  index.doctree
.doctrees/folder_topic/: article_topic.doctree
.doctrees/yay/: article_topic.doctree
_sources/: about.md  index.md
_sources/yay/: article_topic.md
folder_topic/: article_topic.html
yay/: article_topic.html
